Use record classes for data classes